# docs/swagger.json
@@ -8,7 +8,7 @@
             "name": "Apache-2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "0.0.18"
+        "version": "0.0.19"
     },
     "basePath": "/",
     "paths": {
@@ -272,6 +272,9 @@
                     "type": "string"
                 },
                 "filterValue": {
+                    "type": "string"
+                },
+                "filterValue2": {
                     "type": "string"
                 },
                 "mappings": {
